--- a/driver/text1.build_log.htm
+++ b/driver/text1.build_log.htm
@@ -25,9 +25,11 @@ D:\project\motor_driver\software\git_root\driver\text1.uvproj
 Project File Date:  10/12/2016
 
 <h2>Output:</h2>
-Build target 'Target 1'
+Rebuild target 'Target 1'
+assembling STARTUP.A51...
+compiling text1.c...
 linking...
-Program Size: data=9.0 xdata=0 code=88
+Program Size: data=9.0 xdata=0 code=90
 creating hex file from "text1"...
 "text1" - 0 Error(s), 0 Warning(s).
 </pre>
